[package]
name = "msg_encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-arrays = "0.1.2"
rsa = "0.6.1"
rand = "0.8.5"
sha2 = "0.10.2"
hex = "0.4.3"
lz4_flex  = "0.9.2"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]
